# NLCA-IoT-Cryptography

./: .gitignore  ALGORITHM_SPECIFICATION.md  CHANGELOG.md  CITATION.cff  CODE_AVAILABILITY.md  README.md  REPRODUCIBILITY.md  SECURITY_SCOPE.md  environment.yml  generate_figures.py  generate_tables.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_benchmarks.py  run_experiments.py  run_round_analysis.py  run_security_analysis.py  run_test_vectors.py  verify_repository.py
nlca/: __init__.py  aaaa.txt  baselines.py  benchmarking.py  cipher.py  cli.py  constants.py  datasets.py  key_schedule.py  modes.py  nlca_reference.c  nlca_reference.h  primitives.py  security_analysis.py  verification.py  visualization.py
tests/: aaa.txt  test_baselines.py  test_cipher.py  test_constants.py  test_key_schedule.py  test_modes.py  test_primitives.py  test_python_c_equivalence.py  test_reproducibility.py  test_security_analysis.py  test_vectors.json
